# the-language

./: .gitignore  CMakeLists.txt  README.md  language.ebnf  makefile  setup.py  slides.pptx
example/: calculator.txt  example.the
python/: SymbolTable.py  Typed_value.py  __init__.py
python/nodes/: Abstract_node.py  Assignment_node.py  Binary_operation_node.py  Block_node.py  Call_node.py  Declaration_node.py  Function_node.py  Identifier_node.py  Integer_node.py  No_operation_node.py  Reference_node.py  Return_node.py  Statement_node.py  String_node.py  Ternary_operation_node.py  Unary_operation_node.py  __init__.py
src/: ast.c  ast.cpp  ast.h  lexer.l  main.c  main.cpp  parser.y
src/ast/: abstract_node.cpp  abstract_node.h
